# mpv-examples

cplugins/: README.md
libmpv/: README.md
libmpv/cocoa-rendergl/: cocoa-rendergl.m
libmpv/csharp/: Form1.cs
libmpv/embedinwid/: libexample.cpp  videoplayer.cpp  videoplayer.h  videoplayer.mm
libmpv/gtk/: Makefile  main.c
libmpv/ios/: ViewController.m
libmpv/qml/: main.cpp  main.h  main.qml  mpvtest.pro
libmpv/qml_direct/: main.cpp  main.h  main.qml
libmpv/qt/: qtexample.cpp
libmpv/qt_opengl/: CMakeLists.txt  main.cpp  mpvwidget.cpp  mpvwidget.h  qt_opengl.pro
libmpv/sdl/: main.c  main_sw.c
libmpv/streamcb/: simple-streamcb.c
libmpv/wxwidgets/: main.cpp
libmpv/wxwidgets_opengl/: main.cpp  main.h
